<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:teamcanjica="http://schemas.android.com/apk/res/com.teamcanjica.settings.device">

    <PreferenceCategory android:title="@string/otg_subcat_title" >
        <!-- USB OTG Power -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="usb_otg_power"
            android:summary="@string/otg_power_summary_head"
            android:title="@string/otg_power_title_head" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cc_subcat_title" >
        <!-- Charger control -->
        <CheckBoxPreference
            android:key="use_charger_control"
            android:summary="@string/use_cc_summary_head"
            android:title="@string/use_cc_title_head" />
        <!-- Charger currency -->
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="600"
            android:entries="@array/charger_currency_entries"
            android:entryValues="@array/charger_currency_entries_values"
            android:key="charger_currency"
            android:summary="@string/cc_summary_head"
            android:title="@string/cc_title_head" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/ccc_subcat_title" >
    <!-- Cycle Charging control -->
        <CheckBoxPreference
            android:key="use_cycle_charging"
            android:summary="@string/use_ccc_summary_head"
            android:title="@string/use_ccc_title_head" />
        <!-- Discharging threshold -->
        <com.teamcanjica.settings.device.MasterSeekBarDialogPreference
           android:defaultValue="100"
           android:dialogMessage="@string/dt_dialog_message"
           teamcanjica:maximumValue="100"
           teamcanjica:minimumValue="5"
           teamcanjica:units="%"
           teamcanjica:stepSize="5"
           android:key="discharging_threshold"
           android:title="@string/dt_title_head"
           android:summary="@string/dt_summary_head" />
        <!-- Recharging threshold -->
        <com.teamcanjica.settings.device.MasterSeekBarDialogPreference
           android:defaultValue="100"
           android:dialogMessage="@string/rt_dialog_message"
           teamcanjica:maximumValue="100"
           teamcanjica:minimumValue="5"
           teamcanjica:units="%"
           teamcanjica:stepSize="5"
           android:key="recharging_threshold"
           android:title="@string/rt_title_head"
           android:summary="@string/rt_summary_head" />
   </PreferenceCategory>

    <PreferenceCategory android:title="@string/eoc_title" >
        <!-- End of charge -->
        <Preference
            android:key="eoc_status"
            android:summary="@string/eoc_summary_head"
            android:title="@string/eoc_title_head" />
    </PreferenceCategory>

</PreferenceScreen>
