<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:teamcanjica="http://schemas.android.com/apk/res/com.teamcanjica.settings.device" >

    <PreferenceCategory android:title="@string/storage_subcat_title" >
        <CheckBoxPreference
            android:key="switch_storage"
            android:summary="@string/switch_storage_summary_head"
            android:title="@string/switch_storage_title_head" />
    </PreferenceCategory>

   <PreferenceCategory android:title="@string/backlight_subcat_title" >
        <CheckBoxPreference
            android:key="disable_bln"
            android:summary="@string/disable_bln_summary_head"
            android:title="@string/disable_bln_title_head" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/voltages_subcat_title" >
        <com.teamcanjica.settings.device.MasterSeekBarDialogPreference
            android:key="cpu_voltage"
            android:title="@string/cpu_voltage_title_head"
            android:summary="@string/cpu_voltage_summary_head"
            android:dialogMessage="@string/cpu_voltage_dialog_message"
            android:defaultValue="0.0"
            teamcanjica:maximumValue="0"
            teamcanjica:minimumValue="-50"
            teamcanjica:units="mV"
            teamcanjica:stepSize="12.5" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/accelerometer_subcat_title" >
        <!-- Use sensor calibration -->
        <CheckBoxPreference
            android:key="use_accelerometer_calibration"
            android:summary="@string/use_accelerometer_calibration_summary_head"
            android:title="@string/use_accelerometer_calibration_title_head" />
        <!-- Do accelerometer calibration -->
        <Preference
            android:key="calibrate_accelerometer"
            android:summary="@string/calibrate_accelerometer_summary_head"
            android:title="@string/calibrate_accelerometer_title_head" />
    </PreferenceCategory>

</PreferenceScreen>
