<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/clock_speed_title" >
        <CheckBoxPreference
            android:key="disable_autoboost"
            android:summary="@string/disable_autoboost_summary_head"
            android:title="@string/disable_autoboost_title_head" />

        <com.teamcanjica.settings.device.MasterListPreference
            android:key="set_gpu_clock"
            android:summary="@string/set_gpu_clock_summary_head"
            android:title="@string/set_gpu_clock_title_head"
            android:entries="@array/set_gpu_clock_entries"
            android:entryValues="@array/set_gpu_clock_entries_values" />
        
        <CheckBoxPreference
            android:key="disable_fullspeed"
            android:summary="@string/disable_fullspeed_summary_head"
            android:title="@string/disable_fullspeed_title_head" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/gpu_misc_title">
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="48"
            android:entries="@array/mali_l2_mr_entries"
            android:entryValues="@array/mali_l2_mr_entries_values"
            android:key="mali_l2_mr"
            android:summary="@string/mali_l2_mr_summary_head"
            android:title="@string/mali_l2_mr_title_head" />

		<com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="50331648"
            android:entries="@array/mali_pam_entries"
            android:entryValues="@array/mali_pam_entries_values"
            android:key="mali_pam"
            android:summary="@string/mali_pam_summary_head"
            android:title="@string/mali_pam_title_head" />
    </PreferenceCategory>
</PreferenceScreen>