<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:teamcanjica="http://schemas.android.com/apk/res/com.teamcanjica.settings.device">

    <PreferenceCategory android:title="@string/mmc_subcat_title" >
        <CheckBoxPreference
            android:key="use_spi_crc"
            android:summary="@string/use_spi_crc_summary_head"
            android:title="@string/use_spi_crc_title_head" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/scheduler_subcat_title" >
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="0"
            android:entries="@array/sched_mc_entries"
            android:entryValues="@array/sched_mc_entries_values"
            android:key="sched_mc"
            android:summary="@string/sched_mc_summary_head"
            android:title="@string/sched_mc_title_head" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/scheduler_subcat_title" >
       <com.teamcanjica.settings.device.MasterSeekBarDialogPreference
           android:defaultValue="512"
           android:dialogMessage="@string/readaheadkb_dialog_message"
           teamcanjica:maximumValue="4096"
           teamcanjica:minimumValue="128"
           teamcanjica:units="kB"
           teamcanjica:stepSize="128"
           android:key="readaheadkb"
           android:title="@string/readaheadkb_title_head"
           android:summary="@string/readaheadkb_summary_head" />
   </PreferenceCategory>

    <PreferenceCategory android:title="@string/deepsleep_subcat_title" >
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="3"	
            android:entries="@array/deepest_sleep_states_entries"
            android:entryValues="@array/deepest_sleep_states_entries_values"
            android:key="deepest_sleep_state"
            android:summary="@string/deepest_sleep_summary_head"
            android:title="@string/deepest_sleep_title_head" />
    </PreferenceCategory>

</PreferenceScreen>
