<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/touchscreen_subcat_title" >
        <CheckBoxPreference
            android:key="use_sweep2wake"
            android:summary="@string/use_sweep2wake_summary_head"
            android:title="@string/use_sweep2wake_title_head" />
        <com.teamcanjica.settings.device.S2WThreshold
            android:key="x_sweep2wake"
            android:summary="@string/x_sweep2wake_summary_head"
            android:title="@string/x_sweep2wake_title_head"
            android:digits="0123456789"
            android:inputType="number"
            android:defaultValue="120" />
        <com.teamcanjica.settings.device.S2WThreshold
            android:key="y_sweep2wake"
            android:summary="@string/y_sweep2wake_summary_head"
            android:title="@string/y_sweep2wake_title_head"
            android:digits="0123456789"
            android:inputType="number"
            android:defaultValue="240" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/fsync_subcat_title" >
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="0"
            android:entries="@array/fsync_mode_entries"
            android:entryValues="@array/fsync_mode_entries_values"
            android:key="fsync_mode"
            android:summary="@string/fsync_summary_head"
            android:title="@string/fsync_title_head" />
    </PreferenceCategory>

</PreferenceScreen>
